{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "3e999e81-e112-419e-8c51-9b9f20f260a6",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "c9aa3fb3-cd06-44a1-b9c4-b4f55bfe1056",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "fa5cb320-b4ed-47f3-a104-5a7d7653d3c4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lock On Target Left",
                    "type": "Button",
                    "id": "72cdb335-10c2-4b99-bd8c-2fe474367888",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lock On Target Right",
                    "type": "Button",
                    "id": "47316723-2e98-4667-b7b3-0cd76ae1e593",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "958c39f1-f8a8-4d02-80e4-3406fcf2f835",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3a67c998-ee07-48a4-bfe9-bc59ffe09f22",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6409bb8f-7711-478d-9318-fc42a1376543",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2ef2f197-4e7a-4e07-9475-ae306e417f33",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "04fa9ecb-4e04-4798-89c9-58c2ad451f40",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "58fa1638-fd06-49b3-9b9b-3f05a00d18a7",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01817a3d-eed4-432f-8709-22bc8d57cde1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0ccac5b-ead1-44b3-ba02-59d046e0c29a",
                    "path": "<Keyboard>/1",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Lock On Target Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e897a7c-ea5c-4499-a090-d9d77ecab5c2",
                    "path": "<Keyboard>/2",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Lock On Target Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "9ff64725-23de-461a-bd6e-7bb967004394",
            "actions": [
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "b0ef00e3-6b32-4713-bacc-50a8b666184d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RB",
                    "type": "Button",
                    "id": "9539b7cc-98a9-4990-871a-b79e19453739",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Critical Attack",
                    "type": "Button",
                    "id": "2aaf337d-e3f0-4ca9-9187-817912fa488e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RT",
                    "type": "Button",
                    "id": "415f5e1e-7c32-4f29-83f9-e83971b8dc93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "aebda133-8423-4ebb-a1fb-c3af6c90def8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "62e1b725-9a77-49b7-a93b-40e49b7e4e50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "5ad2caee-3cb1-4666-9ec3-f8b0aada2535",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "ef60e719-7b52-4944-aad8-c2d7c101b678",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Y",
                    "type": "Button",
                    "id": "f9466088-2a3f-4e96-ba95-b19975ea3772",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "10e916ad-88e0-4026-aa27-137962a8a995",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f68da19-7549-4c11-91ae-d5e26887ca49",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d32b135-c326-45d7-9d20-33648d2ef1e2",
                    "path": "<Mouse>/press",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "RB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eda119fb-1b10-4797-8ee6-71c8c1e83012",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72db1484-7e11-49da-83f8-405c1c5cc1b8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "def348f3-6f7e-4815-a73f-1d8d1e520445",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de56c453-9d35-4f06-a315-0fa71d1b352c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cba4f3e-4953-4273-8de9-03d1f6b94a28",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "965d04a4-d0bf-4cc9-87cc-736c97e7528c",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e46d0c22-cfed-4533-90db-0986d3b6be4e",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Critical Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerQuickSlots",
            "id": "423ac80b-fe23-4244-b5bc-e3ed7de8dd71",
            "actions": [
                {
                    "name": "D-Pad Up",
                    "type": "Button",
                    "id": "0b6b21c0-9785-472b-9cd5-3768c350fc46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "D-Pad Down",
                    "type": "Button",
                    "id": "8330268b-e0e6-4d9b-b4d2-e868b5741413",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "D-Pad Left",
                    "type": "Button",
                    "id": "6975478d-cbb6-47c6-8727-f26abef44a5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "D-Pad Right",
                    "type": "Button",
                    "id": "36905400-d856-4c99-851d-1a955d74012d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c3aef795-da67-4958-8403-da137f62eb76",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-Pad Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b300412a-2702-4852-9141-aadff315c27a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-Pad Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f43d2f98-97d8-4322-8453-70d17352c569",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-Pad Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52b1f7e0-4d06-4cdc-81a8-b05d689b972f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-Pad Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}